Updated http adress to https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Agron354.github.io/web-cv",
+  "homepage": "https://Agron354.github.io/web-cv",
   "name": "web-cv",
   "version": "0.1.0",
   "private": true,
